--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,39 @@
 .container{
     width: 1000px;
     height: 1000px;
-    background-color: chocolate;
+    background-color:  #181825;
 }
 .btn1{
-    text-align: center;
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+
 }
 .btn{
     width: 50px;
     height: 50px;
     text-align: center;
-    position: absolute;
-    top: 50%;
+    position: relative;
+    float: left;
+}
+#ui{
+    display: flex;
+    align-items: center;
+    font-size: 10px;
+    flex-flow: column;
+    margin-left: 10px;
+}
+#canvas{
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+body{
+    background-color: #222738;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #6e7888;
 }
