--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,19 @@
     border: 0;
     font-size: 100%;
 }
-.container{
-    width: 1000px;
-    height: 1000px;
-    background-color:  #181825;
+/*.container{*/
+    /*width: 1000px;*/
+    /*height: 1000px;*/
+    /*background-color:  #181825;*/
+.container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
 }
+
 .btn1{
     width: 100px;
     height: 100px;
@@ -25,7 +33,7 @@
 #ui{
     display: flex;
     align-items: center;
-    font-size: 10px;
+    font-size: 50px;
     flex-flow: column;
     margin-left: 10px;
 }
@@ -35,6 +43,7 @@
     margin-left: auto;
     margin-right: auto;
     display: block;
+    background-color: #181825;
 }
 body{
     background-color: #222738;
@@ -43,3 +52,48 @@ body{
     align-items: center;
     color: #6e7888;
 }
+#replay {
+    font-size: 10px;
+    padding: 10px 20px;
+    background: #6e7888;
+    border: none;
+    color: #222738;
+    border-radius: 20px;
+    font-weight: 800;
+    transform: rotate(270deg);
+    cursor: pointer;
+    transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+#replay:hover {
+    background: #a6aab5;
+    background: #4cffd7;
+    transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+author {
+    width: 100%;
+    bottom: 40px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 600;
+    color: inherit;
+    text-transform: uppercase;
+    padding-left: 35px;
+}
+#author span {
+    font-size: 30px;
+    margin-left: 10px;
+    color: inherit;
+    letter-spacing: 4px;
+}
+#author h1 {
+    font-size: 75px;
+}
+.wrapper {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
