--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@
     float: left;
 }
 #ui{
-    display: flex;
+    /*display: flex;*/
     align-items: center;
     font-size: 50px;
     flex-flow: column;
@@ -43,7 +43,7 @@
     margin-left: auto;
     margin-right: auto;
     display: block;
-    background-color: #181825;
+    background-color:  #222738;
 }
 body{
     background-color: #222738;
@@ -65,20 +65,15 @@ body{
     transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 #replay:hover {
-    background: #a6aab5;
     background: #4cffd7;
     transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-author {
-    width: 100%;
-    bottom: 40px;
-    display: inline-flex;
+#author {
+    display: flex;
     align-items: center;
-    justify-content: center;
-    font-weight: 600;
-    color: inherit;
-    text-transform: uppercase;
-    padding-left: 35px;
+    font-size: 50px;
+    flex-flow: column;
+    margin-left: 10px;
 }
 #author span {
     font-size: 30px;
@@ -96,4 +91,25 @@ author {
     align-items: center;
     margin-bottom: 20px;
 }
+#start{
+    margin-top: 40px;
+    margin-left:350px ;
+   text-align: center;
+    font-size: 50px;
+    padding: 10px 20px;
+    background: #6e7888;
+    border: none;
+    color: #222738;
+    border-radius: 20px;
+    font-weight: 800;
+    cursor: pointer;
+    transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+#start:hover {
+    background: #4cffd7;
+    transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
 
