--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
+:root{
+    --color: #3b3b86;
+}
 *{
     margin: 0;
     padding: 0;
     border: 0;
     font-size: 100%;
 }
-/*.container{*/
-    /*width: 1000px;*/
-    /*height: 1000px;*/
-    /*background-color:  #181825;*/
+
 .container {
     display: flex;
     width: 100%;
@@ -31,11 +31,10 @@
     float: left;
 }
 #ui{
-    /*display: flex;*/
+    margin-left: 300px;
     align-items: center;
     font-size: 50px;
     flex-flow: column;
-    margin-left: 10px;
 }
 #canvas{
     padding-left: 0;
@@ -91,10 +90,11 @@ body{
     align-items: center;
     margin-bottom: 20px;
 }
+#button{
+    position: relative;
+}
 #start{
-    margin-top: 40px;
-    margin-left:350px ;
-   text-align: center;
+    position: absolute;
     font-size: 50px;
     padding: 10px 20px;
     background: #6e7888;
@@ -104,12 +104,109 @@ body{
     font-weight: 800;
     cursor: pointer;
     transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+#wall{
+    position: absolute;
+    margin-left: 650px;
+    font-size: 50px;
+    /*border-radius: 20px;*/
+    /*font-weight: 800;*/
+    cursor: pointer;
+}
+#no-wall{
+    position: absolute;
+    font-size: 50px;
+    /*border-radius: 20px;*/
+    /*font-weight: 800;*/
+    cursor: pointer;
 
 }
 #start:hover {
     background: #4cffd7;
     transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.button a{
+    display: inline-block;
+    padding: 15px 30px;
+    border: 2px solid var(--color);
+    margin: 40px;
+    text-transform: uppercase;
+    /*font-weight:600px;*/
+    text-decoration: none;
+    letter-spacing: 2px;
+    color: #6e7888;
+    -webkit-box-reflect: below 0px linear-gradient(transparent,#0002);
+    transition: 0.5s;
+    transition-delay: 0s;
+}
+.button span{
+    position: relative;
+    z-index: 100;
+}
+.button a :hover
+{
+    transition-delay: 0.75s;
+    color: #222738;
+    /*background: var(--color);*/
+    box-shadow:  0 0  10px var(--color),
+                0 0 20px var(--color) ,
+                0 0 40px var(--color) ,
+                0 0 80px var(--color) ,
+                0 0 160px var(--color) ;
+}
+.button a :nth-child(2)
+{
+    filter: hue-rotate(80deg);
+}
+.button a::before
+{
+    content:'' ;
+    position: absolute;
+    left: -20px;
+    top: 50% ;
+    transform: translateY(-50%);
+    width: 20px;
+    height: 2px;
+    background: var(--color);
+    box-shadow: 5px -8px 0 var(--color),
+                5px 8px 0 var(--color) ;
+    transition: width 0.5s, left 0.5s, height 0.5s, box-shadow 0.5s;
+    transition-delay: 1s,0.5s,0s,0s;
+}
+.button  a:hover::before
+{
+    width: 60%;
+    height: 100%;
+    left: -2px;
+    box-shadow: 5px 0 0 var(--color),
+                5px 0 0 var(--color) ;
+    transition-delay: 0s,0s,0.5s,1s;
+}
+.button a::after
+{
+    content:'' ;
+    position: absolute;
+    right: -20px;
+    top: 50% ;
+    transform: translateY(-50%);
+    width: 20px;
+    height: 2px;
+    background: var(--color);
+    box-shadow: -5px -8px 0 var(--color),
+                -5px 8px 0 var(--color) ;
+    transition: width 0.5s, left 0.5s, height 0.5s, box-shadow 0.5s;
+    transition-delay: 1s,0.5s,0s,0s;
+}
+.button  a:hover::after
+{
+    width: 60%;
+    height: 100%;
+    right: -2px;
+    box-shadow: -5px 0 0 var(--color),
+                -5px 0 0 var(--color) ;
+    transition-delay: 0s,0s,0.5s,1s;
+}
+
 
 
 
